# auto-sklearn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
auto_sklearn/: __init__.py  api.py
auto_sklearn/audit/: __init__.py  logger.py
auto_sklearn/core/: __init__.py
auto_sklearn/core/data/: __init__.py  context.py  cv.py  manager.py
auto_sklearn/core/model/: __init__.py  dependency.py  graph.py  joint_quantile_fitted.py  joint_quantile_graph.py  node.py  quantile_node.py
auto_sklearn/core/tuning/: __init__.py  joint_quantile_orchestrator.py  orchestrator.py
auto_sklearn/execution/: __init__.py  local.py
auto_sklearn/meta/: __init__.py  correlation.py  prebaked.py  reparameterization.py
auto_sklearn/persistence/: __init__.py  cache.py  store.py
auto_sklearn/plugins/: __init__.py  base.py  registry.py
auto_sklearn/plugins/joint_quantile/: __init__.py  order_search.py
auto_sklearn/plugins/xgboost/: __init__.py  importance.py  multiplier.py
auto_sklearn/search/: __init__.py  parameter.py  space.py
auto_sklearn/search/backends/: __init__.py  base.py  optuna.py
auto_sklearn/selection/: __init__.py  selector.py  shadow.py
docs/: api-reference.md  cross-validation.md  feature-selection.md  getting-started.md  index.md  joint-quantile-regression.md  model-graphs.md  plugins.md  reparameterization.md  review-backlog.md  search-spaces.md  stacking.md  tuning.md  upgrading-to-0.2.md
sklearn_meta/: __init__.py  api.py  convenience.py
sklearn_meta/artifacts/: compiler.py  inference.py  training.py
sklearn_meta/audit/: __init__.py  logger.py
sklearn_meta/core/: __init__.py
sklearn_meta/core/data/: __init__.py  context.py  cv.py  manager.py
sklearn_meta/core/model/: __init__.py  graph.py  joint_quantile_fitted.py  joint_quantile_graph.py  node.py  quantile_node.py  quantile_sampler.py
sklearn_meta/core/tuning/: __init__.py  _metrics.py  estimator_scaling.py  joint_quantile_orchestrator.py  orchestrator.py  strategy.py
sklearn_meta/data/: __init__.py  batch.py  record.py  view.py
sklearn_meta/engine/: __init__.py  _metrics.py  cv.py  distillation.py  estimator_factory.py  estimator_scaling.py  quantile_trainer.py  runner.py  search.py  selection.py  strategy.py  trainer.py
sklearn_meta/execution/: __init__.py  base.py  local.py  training.py
sklearn_meta/meta/: __init__.py  correlation.py  prebaked.py  reparameterization.py
sklearn_meta/persistence/: __init__.py  cache.py  manifest.py  store.py
sklearn_meta/plugins/: __init__.py  base.py  registry.py
sklearn_meta/plugins/joint_quantile/: __init__.py  order_search.py
sklearn_meta/plugins/xgboost/: __init__.py  importance.py  multiplier.py
sklearn_meta/runtime/: __init__.py  config.py  services.py
sklearn_meta/search/: __init__.py  parameter.py  space.py
sklearn_meta/search/backends/: __init__.py  base.py  optuna.py
sklearn_meta/selection/: __init__.py  importance.py  selector.py  shadow.py
sklearn_meta/spec/: __init__.py  _resolve.py  builder.py  dependency.py  distillation.py  graph.py  node.py  quantile.py
tests/: conftest.py
tests/integration/: test_distillation_e2e.py  test_full_integration.py  test_full_pipeline.py  test_joint_quantile_e2e.py  test_parallel.py  test_predict_contract.py  test_training_dispatcher.py
tests/math/: test_cv_leakage.py  test_quantile_sampler_math.py
tests/mathematical/: __init__.py  test_cv_leakage.py  test_quantile_sampler_math.py  test_reparameterization_math.py
tests/models/: test_sklearn_models.py
tests/unit/: test_api.py  test_convenience.py  test_fit_convenience.py
tests/unit/artifacts/: test_inference_graph.py  test_training_persistence.py  test_training_predict.py
(+54 files in other folders)
